# MUSCE

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.agents/skills/fleet-review/: SKILL.md  lenses.md  prompts.md  report.md
.agents/skills/rocky/: README.md  SKILL.md
.agents/skills/rocky-commit/: README.md  SKILL.md
.agents/skills/rocky-compress/: README.md  SKILL.md
.agents/skills/rocky-help/: README.md  SKILL.md
.agents/skills/rocky-review/: README.md  SKILL.md
.agents/skills/rockycrew/: README.md  SKILL.md
.github/workflows/: ci.yml
bb/: guards.clj  hygiene.clj  length.clj
docs/: architecture.md
docs/architecture/: README.md  accounts.md  actions.md  admin-verbs.md  authorization.md  benchmarks.md  cold-storage.md  command-dispatch.md  concurrency.md  ecs-and-relations.md  engine-and-game.md  facts.md  indexes.md  networking-and-sessions.md  persistence.md  sequences.md  sharding.md
musce/: Cargo.toml
musce/src/: lib.rs
musce_action/: Cargo.toml
musce_action/src/: audience.rs  bindings.rs  caps.rs  ctx.rs  dispatch.rs  event.rs  executor.rs  lib.rs  names.rs  registry.rs  seed.rs  verbs.rs
musce_auth/: Cargo.toml
musce_auth/src/: account.rs  lib.rs  password.rs  store.rs
musce_core/: Cargo.toml
musce_core/benches/: world_ops.rs
musce_core/src/: component.rs  containment.rs  control.rs  exit.rs  fact.rs  id.rs  lib.rs  relation.rs  snapshot.rs  world.rs
musce_host/: Cargo.toml
musce_host/src/: accounts.rs  auth.rs  dispatch.rs  lib.rs  main.rs  session.rs
musce_host/tests/: play_session.rs
musce_index/: Cargo.toml
musce_index/src/: lib.rs
musce_net/: Cargo.toml
musce_net/src/: boundary.rs  connection.rs  lib.rs  tcp.rs
musce_net/tests/: tcp_pipe.rs
musce_persistence/: Cargo.toml
musce_persistence/benches/: snapshot_roundtrip.rs
musce_persistence/src/: lib.rs  postgres.rs  sqlite.rs
musce_proto/: Cargo.toml
musce_proto/src/: lib.rs
musce_ref/: Cargo.toml
musce_ref/benches/: command_latency.rs  index_query.rs  tick_work.rs
musce_ref/src/: admin.rs  exits.rs  kinds.rs  lib.rs  main.rs  names.rs  seed.rs  sequences.rs  spatial.rs  systems.rs  verbs.rs
musce_ref/src/admin/: mod.rs  tests.rs
musce_ref/src/verbs/: books.rs  combat.rs  containers.rs  control.rs  manipulate.rs  movement.rs  observe.rs  social.rs  tests.rs
musce_ref/tests/: play_session.rs
