[workspace]
resolver = "3"
members = ["musce","musce_action", "musce_auth","musce_core", "musce_host", "musce_index", "musce_net", "musce_persistence", "musce_proto", "musce_ref"]

[workspace.dependencies]
crossbeam-channel = "0.5.15"
hecs = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
criterion = { version="0.8.2", features = ["html_reports"] }
uuid = { version = "1.24.0", features = ["v7", "serde"] }

# internal
musce = { path = "musce" }
musce_action = { path = "musce_action" }
musce_auth = { path = "musce_auth" }
musce_core = { path = "musce_core" }
musce_host = { path = "musce_host" }
musce_index = { path = "musce_index" }
musce_net = { path = "musce_net" }
musce_persistence = { path = "musce_persistence" }
musce_proto = { path = "musce_proto" }
