[package]
name = "musce_persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
musce_auth = { workspace = true }
musce_core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "snapshot_roundtrip"
harness = false
