[package]
name = "musce_ref"
version = "0.1.0"
edition = "2024"

[dependencies]
musce_action = { workspace = true }
musce_core = { workspace = true }
musce_host = { workspace = true }
musce_persistence = { workspace = true }
musce_proto = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
